added username to messages

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -3,6 +3,7 @@
 <ul>
   <% @messages.each do |message| %>
     <li>
+      <%= message.username %>
       <%= message.body %>
       <%= message.created_at %>
     </li>
