--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -6,6 +6,7 @@
     <%= form.text_area :body %>
     <% @message.errors.full_messages_for(:body).each do |message| %>
   </div>
+    <% end %>
 
   <div>
     <%= form.submit %>
