--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -5,8 +5,9 @@
     <%= form.label "I say:" %><br>
     <%= form.text_area :body %>
     <% @message.errors.full_messages_for(:body).each do |message| %>
-  </div>
+      <div><%= message %></div>
     <% end %>
+  </div>
 
   <div>
     <%= form.submit %>
