aesthetic resize of message box

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_with model: @message do |form| %>
   <div>
     <%= form.label "I say:" %><br>
-    <%= form.text_area :body %>
+    <%= form.text_area :body, cols: 30, rows: 10 %>
     <% @message.errors.full_messages_for(:body).each do |message| %>
       <div><%= message %></div>
     <% end %>
