--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Messages</h1>
 
 <ul>
-  <% @messages.each_with_index do |message, i| %>
+  <% @messages.reverse_each do |message, i| %>
     <div style="background-color: #fafaff;">
       <p><%= message.body %></p>
       <small><pre>
