added time of messages being viewed as header and reordered pagination thingy

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,14 @@
 <h1>Messages</h1>
+<h3><%= index_date.strftime('%B-%d-%Y') %></h3>
+
+<%= button_to "New Message", new_message_path, method: :get %>
+<br>
+
+<%= link_to "<<", root_path(:date => prev_week) %>&nbsp;&nbsp;&nbsp;
+<%= link_to "<", root_path(:date => prev_day) %>&nbsp;&nbsp;&nbsp;
+<%= link_to "Today", root_path %>&nbsp;&nbsp;&nbsp;
+<%= link_to ">", root_path(:date => next_day) %>&nbsp;&nbsp;&nbsp;
+<%= link_to ">>", root_path(:date => next_week) %>&nbsp;&nbsp;&nbsp;
 
 <ul>
   <% @messages.reverse_each do |message, i| %>
@@ -10,15 +20,6 @@
    </div>
   <% end %>
 </ul>
-
-<%= link_to "New Message", new_message_path %>
-<br>
-<%= link_to "today", root_path %>
-
-<%= link_to "next_week", root_path(:date => next_week) %>
-<%= link_to "next_day", root_path(:date => next_day) %>
-<%= link_to "prev_day", root_path(:date => prev_day) %>
-<%= link_to "prev_week", root_path(:date => prev_week) %>
 
 <script>
 function set_time_zone_offset() {
