fixed pound rgb color code and added example

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,7 +12,7 @@
 
 <ul>
   <% @messages.reverse_each do |message, i| %>
-    <div style="background-color: #<%= message.user.color %>;">
+    <div style="background-color: <%= message.user.color %>;">
       <p><%= message.body %></p>
       <small><pre>
         <%= message.created_at.in_time_zone(@timezone) %> <%= message.user.username %>
