--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Messages</h1>
-<h3><%= index_date.strftime('%B-%d-%Y') %></h3>
+<strong><%= index_date.strftime('%B-%d-%Y') %></strong>
 
 <%= button_to "New Message", new_message_path, method: :get %>
 <br>
@@ -10,16 +9,14 @@
 <%= link_to ">", root_path(:date => next_day) %>&nbsp;&nbsp;&nbsp;
 <%= link_to ">>", root_path(:date => next_week) %>&nbsp;&nbsp;&nbsp;
 
-<ul>
-  <% @messages.reverse_each do |message, i| %>
-    <div style="background-color: <%= message.user.color %>;">
-      <p><%= message.body %></p>
-      <small><pre>
-        <%= message.created_at.in_time_zone(@timezone) %> <%= message.user.username %>
-     </pre></small>
-   </div>
-  <% end %>
-</ul>
+<% @messages.reverse_each do |message, i| %>
+  <div style="background-color: <%= message.user.color %>;">
+    <p><%= message.body %></p>
+    <small><pre>
+      <%= message.created_at.in_time_zone(@timezone) %> <%= message.user.username %>
+   </pre></small>
+ </div>
+<% end %>
 
 <script>
 function set_time_zone_offset() {
