--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,21 +1,90 @@
-<strong><%= index_date.strftime('%B-%d-%Y') %></strong>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 20px;
+  }
 
-<%= button_to "New Message", new_message_path, method: :get %>
-<br>
+  h1 {
+    font-size: 24px;
+    color: #333;
+  }
 
-<%= link_to "<<", root_path(:date => prev_week) %>&nbsp;&nbsp;&nbsp;
-<%= link_to "<", root_path(:date => prev_day) %>&nbsp;&nbsp;&nbsp;
-<%= link_to "Today", root_path %>&nbsp;&nbsp;&nbsp;
-<%= link_to ">", root_path(:date => next_day) %>&nbsp;&nbsp;&nbsp;
-<%= link_to ">>", root_path(:date => next_week) %>&nbsp;&nbsp;&nbsp;
+  .date {
+    font-weight: bold;
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  .button-container {
+    margin-bottom: 20px;
+  }
+
+  .navigation {
+    margin: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    width: 250px;
+  }
+
+  .navigation a {
+    text-decoration: none;
+    color: #007BFF;
+    padding: 10px 15px;
+    border: 1px solid #007BFF;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+  }
+
+  .navigation a:hover {
+    background-color: #007BFF;
+    color: white;
+  }
+
+  .message {
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .message p {
+    margin: 0;
+    color: #333;
+  }
+
+  .message small {
+    display: block;
+    color: #666;
+    font-size: 12px;
+  }
+</style>
+
+<h1 class="date"><%= index_date.strftime('%B-%d-%Y') %></h1>
+
+<div class="button-container">
+  <%= button_to "New Message", new_message_path, method: :get, class: "btn" %>
+</div>
+
+<div class="navigation">
+  <%= link_to "<<", root_path(:date => prev_week) %>
+  <%= link_to "<", root_path(:date => prev_day) %>
+  <%= link_to "Today", root_path %>
+  <%= link_to ">", root_path(:date => next_day) %>
+  <%= link_to ">>", root_path(:date => next_week) %>
+</div>
 
 <% @messages.reverse_each do |message, i| %>
-  <div style="background-color: <%= message.user.color %>;">
+  <div class="message" style="background-color: <%= message.user.color %>;">
     <p><%= message.body %></p>
-    <small><pre>
-      <%= message.created_at.in_time_zone(@timezone) %> <%= message.user.username %>
-   </pre></small>
- </div>
+    <small>
+      <pre>
+        <%= message.created_at.in_time_zone(@timezone) %> <%= message.user.username %>
+      </pre>
+    </small>
+  </div>
 <% end %>
 
 <script>
@@ -25,3 +94,4 @@ function set_time_zone_offset() {
 }
 set_time_zone_offset();
 </script>
+
